fixes overlay issue on mobile nav

--- a/src/sass/_music.scss
+++ b/src/sass/_music.scss
@@ -58,7 +58,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        z-index: 999;
+        z-index: 997;
         background: rgba(0,0,0,0.5);
         display: flex;
         flex-direction: column;
